syntax = "proto3";

option java_package = "cl.emilym.sinatra.android.widget.data.proto";
option java_multiple_files = true;

message UpcomingVehicleData {
  bool hasUpcoming = 1;
  repeated UpcomingVehicleStopTime times = 2;
}

message UpcomingVehicleStopTime {
  string childStopId = 9;
  string routeId = 1;
  string routeCode = 2;
  string serviceId = 3;
  string tripId = 10;
  uint64 arrivalTime = 4;
  uint64 departureTime = 5;
  string heading = 6;
  uint32 sequence = 7;
}